Enabled snake thread